parital commit error page

--- a/UI/UI/Views/Shared/_Layout.cshtml
+++ b/UI/UI/Views/Shared/_Layout.cshtml
@@ -31,6 +31,9 @@
                         <li class="nav-item">
                             <a class="nav-link text-dark" href="@Url.Action("Privacy", "Home")">Privacy</a>
                         </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" href="@Url.Action("Error", "Home")">Error</a>
+                        </li>
                     </ul>
                 </div>
             </div>
