implementing users page

--- a/UI/UI/Views/Home/Error.cshtml
+++ b/UI/UI/Views/Home/Error.cshtml
@@ -1,6 +1,6 @@
 ﻿@page
 
 <h2 class="display-4">Oops! Something went wrong.</h2>
-<p class="lead">We're sorry, but the page you were looking for doesn't exist.</p>
+<p class="lead">We're sorry, but the request got an error to process please retry it again.</p>
 <p>If you think this is a mistake, please <a href="mailto:support@example.com">contact support</a>.</p>
 <a href="/" class="btn btn-primary">Go to Homepage</a>
