--- a/UI/UI/Views/Users/Details.cshtml
+++ b/UI/UI/Views/Users/Details.cshtml
@@ -3,7 +3,7 @@
     ViewData["Title"] = "User Details";
 }
 
-<h1>User Details for @Model.Name</h1>
+<h2>User Details for @Model.Name</h2>
 <br />
 <div>
     <p>ID: @Model.Id</p>
@@ -15,5 +15,5 @@
     <p>Country: @Model.Country</p>
     <p>Postal Code: @Model.PostalCode</p>
     <br />
-    <a href="@Url.Action("Index", "Users")" class="btn btn-primary">Back to List</a>
+    <a href="@Url.Action("Index")" class="btn btn-primary">Back to List</a>
 </div>
