--- a/UI/UI/Views/Users/Index.cshtml
+++ b/UI/UI/Views/Users/Index.cshtml
@@ -6,7 +6,9 @@
 <div class="text-center">
     <h1 class="display-4">Welcome to users page</h1>
 </div>
-
+<div class="d-flex justify-content-end mb-3">
+    <a href="@Url.Action("Create", "Users")" class="btn btn-primary">Create New User</a>
+</div>
 <div>
     <h2>User List</h2>
     <table class="table">
@@ -29,6 +31,8 @@
                     <td>@user.Age</td>
                     <td>
                         <a href="@Url.Action("Details", new { id = user.Id })" class="btn btn-info">Details</a>
+                        <a href="@Url.Action("Edit", new { id = user.Id })" class="btn btn-warning">Edit</a>
+                        <a href="@Url.Action("Delete", new { id = user.Id, name = user.Name })" class="btn btn-danger">Delete</a>
                     </td>
                 </tr>
             }
