--- a/UI/UI/Views/Users/Details.cshtml
+++ b/UI/UI/Views/Users/Details.cshtml
@@ -21,6 +21,8 @@
     <p>City: @Model.City</p>
     <p>Country: @Model.Country</p>
     <p>Postal Code: @Model.PostalCode</p>
+    <p>Is Sys Admin: @Model.IsSysAdmin</p>
+    <p>ApiKey: @Model.ApiKey</p>
     <br />
     <a href="@Url.Action("Index")" class="btn btn-primary">Back to List</a>
 </div>
