--- a/UI/UI/Views/Users/Edit.cshtml
+++ b/UI/UI/Views/Users/Edit.cshtml
@@ -40,6 +40,10 @@
         <label for="PostalCode">Postal Code</label>
         <input type="text" class="form-control" id="PostalCode" name="PostalCode" value="@Model.PostalCode" required />
     </div>
+    <div class="form-group">
+        <label for="IsSysAdmin">Is System Admin</label>
+        <input type="checkbox" class="form-check-input" id="IsSysAdmin" name="IsSysAdmin" @(Model.IsSysAdmin ? "checked" : "") />
+    </div>
     <br />
     <button type="submit" class="btn btn-primary">Save</button>
     <a href="@Url.Action("Index", "Users")" class="btn btn-secondary">Cancel</a>
