--- a/UI/UI/Views/Users/Create.cshtml
+++ b/UI/UI/Views/Users/Create.cshtml
@@ -32,6 +32,10 @@
         <label for="PostalCode">Postal Code</label>
         <input type="text" class="form-control" id="PostalCode" name="PostalCode" required />
     </div>
+    <div class="form-group">
+        <label for="IsSysAdmin">Is System Admin</label>
+        <input type="checkbox" class="form-check-input" id="IsSysAdmin" name="IsSysAdmin" />
+    </div>
     <br />
     <button type="submit" class="btn btn-primary">Create</button>
     <a href="@Url.Action("Index")" class="btn btn-secondary">Cancel</a>
