--- a/UI/UI/Views/Users/Delete.cshtml
+++ b/UI/UI/Views/Users/Delete.cshtml
@@ -14,6 +14,7 @@
 <br />
 <form method="post" action="@Url.Action("DeleteUser")">
     <input type="hidden" name="Id" value="@Model.Id"/>
+    <input type="hidden" name="ApiKey" value="@Model.ApiKey"/>
     <button type="submit" class="btn btn-danger">Delete</button>
     <a href="@Url.Action("Index")" class="btn btn-secondary">Cancel</a>
 </form>
