--- a/UI/UI/Views/Users/Delete.cshtml
+++ b/UI/UI/Views/Users/Delete.cshtml
@@ -1,4 +1,4 @@
-﻿@model Shared.ViewModels.UserBaseModel
+﻿@model Shared.ViewModels.UserModel
 @{
     var errorLogs = ViewData["ErrorLogs"] as string;
 }
