--- a/UI/UI/Views/Shared/_Layout.cshtml
+++ b/UI/UI/Views/Shared/_Layout.cshtml
@@ -28,6 +28,9 @@
                         <li class="nav-item">
                             <a class="nav-link text-dark" href="@Url.Action("Index", "Users")">Users</a>
                         </li>
+                       @*  <li class="nav-item">
+                            <a class="nav-link text-dark" href="@Url.Action("Index", "Products")">Products</a>
+                        </li> *@
                         <li class="nav-item">
                             <a class="nav-link text-dark" href="@Url.Action("Privacy", "Home")">Privacy</a>
                         </li>
