--- a/UI/UI/Views/Shared/_Layout.cshtml
+++ b/UI/UI/Views/Shared/_Layout.cshtml
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>@ViewData["Title"] - Microservice UI</title>
+    <title>Microservice UI</title>
     <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
     <link rel="stylesheet" href="~/css/site.css" asp-append-version="true" />
     <link rel="stylesheet" href="~/UI.styles.css" asp-append-version="true" />
@@ -28,7 +28,7 @@
                         <li class="nav-item">
                             <a class="nav-link text-dark" href="@Url.Action("Index", "Users")">Users</a>
                         </li>
-                       @*  <li class="nav-item">
+                        @* <li class="nav-item">
                             <a class="nav-link text-dark" href="@Url.Action("Index", "Products")">Products</a>
                         </li> *@
                         <li class="nav-item">
